hphp/test/vm/fatality.php.expectf
HipHop Fatal error: Function already defined: g in %s on line 14
